fix: Configure Lombok annotation processor for @Slf4j and @Setter sup… (#37)
* fix: Configure Lombok annotation processor for @Slf4j and @Setter support

The project was failing to compile because the Lombok annotation processor
was not configured in maven-compiler-plugin. This caused:
- @Slf4j annotations to not generate the 'log' variable in BasicLine, Line,
  and DbCsvCopybookLoader classes
- @Setter annotations to not generate setStackSize() method required by
  ISetDropCopybookName interface

This fix adds the annotationProcessorPaths configuration to ensure Lombok
annotations are properly processed during compilation.

* fix: Replace Stream.toList() with Collectors.toList() for Java 8 compatibility

Stream.toList() was introduced in Java 16, but the project targets Java 8.
This fixes the CI build failure on JDK 8 by using the Java 8 compatible
Collectors.toList() method instead.

* adjust formatting

* fix: Add missing test resource MultiRecordTest.cbl for TestContinuousIO01

The test was failing because getClass().getResource('MultiRecordTest.cbl')
returned null - the resource file existed in the parent directory but not
in the 'continuous' subdirectory matching the test's package location.